updating some colors

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </nav>
 
     <div id="landing-text">
-      <h1>hi I'm Dylan &mdash; a web developer!
+      <h1>hi I'm Dylan <span style="color: #3498db;">&mdash;</span> a web developer!
       <h2>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non nisi aliquam, imperdiet velit eu, ullamcorper dolor.</h2>
       <div id="icon-container">
         <img src="res/github.png" />
@@ -79,7 +79,7 @@
   <section id="projects">
     <h2 style="width: 80%; max-width: 1500px;" class="section-header">recent projects</h2>
     <div id="wrap">
-      
+
     </div>
   </section>
 
