--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       </div>
 
       <div class="landing-item">
-        <img src="res/seo.png" />
+        <img src="res/seo-3.png" />
         <h3>SEO friendly</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non nisi aliquam, imperdiet velit eu, ullamcorper dolor.</p>
       </div>
