--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="main.css" />
+  <link rel="stylesheet" type="text/css" href="main-sm.css" media="(max-width: 900px)" />
 </head>
 <body>
 
@@ -79,7 +80,7 @@
   <section id="projects">
     <h2 style="width: 80%; max-width: 1300px;" class="section-header">recent projects</h2>
     <div id="wrap">
-      
+
     </div>
   </section>
 
