--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <nav>
       <div id="nav-left">
-        <h1 style="border-bottom: 3px solid #ecf0f1">Dylan Rose</h1>
+        <h1>Dylan Rose</h1>
       </div>
       <div id="nav-right">
         <a>Nav One</a>
@@ -38,7 +38,7 @@
     <div id="wrap">
 
       <div class="landing-item">
-        <img src="res/responsive.png" />
+        <img src="res/responsive-4.png" />
         <h3>Mobile friendly webpages</h3>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque non nisi aliquam, imperdiet velit eu, ullamcorper dolor.</p>
       </div>
