--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" type="text/css" href="main.css" />
   <link rel="stylesheet" type="text/css" href="main-sm.css" media="(max-width: 1100px)" />
+  <link rel="stylesheet" type="text/css" href="main-xsm.css" media="(max-width: 950px)" />
 </head>
 <body>
 
