--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <link rel="stylesheet" type="text/css" href="main.css" />
   <link rel="stylesheet" type="text/css" href="main-sm.css" media="(max-width: 1100px)" />
   <link rel="stylesheet" type="text/css" href="main-xsm.css" media="(max-width: 950px)" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="main.js"></script>
 </head>
 <body>
 
