--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
   <section id="landing-section">
 
     <nav>
-      <div id="nav-left">
-        <h1>Dylan Rose</h1>
-      </div>
-      <div id="nav-right">
-        <a>Nav One</a>
-        <a>Nav Two</a>
-        <a>Nav Three</a>
+      <div id="wrap">
+        <div id="nav-left">
+          <h1>Dylan Rose</h1>
+        </div>
+        <div id="nav-right">
+          <a>Nav One</a>
+          <a>Nav Two</a>
+          <a>Nav Three</a>
+        </div>
       </div>
     </nav>
 
