working on projects area

--- a/index.html
+++ b/index.html
@@ -85,7 +85,39 @@
   <section id="projects">
     <h2 style="width: 80%; max-width: 1300px;" class="section-header">recent projects</h2>
     <div id="wrap">
-      
+
+      <div class="project-item">
+        <img src="res/aarin.png" />
+
+        <div class="info">
+          <h3>AARIN Inc.</h3>
+          <p>A beautiful single page scrolling website built specifically to meet the customers needs and send the message that they were looking for.</p>
+          <ul>
+            <li>Single Page Site</li>
+            <li>Responsive Design</li>
+            <li>Professional styling and colors delivers confidence in the brand</li>
+            <li>Secure contact area with dynamic capitcha</li>
+            <li>Built and delivered in 3 business days</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="project-item">
+        <img src="res/ak-1.png" />
+        <div class="info">
+          <h3>AK Fitness</h3>
+          <ul>
+            <li>Feature One</li>
+            <li>Feature Two</li>
+            <li>Feature Three</li>
+          </ul>
+        </div>
+      </div>
+
+    </div>
+
+
+
     </div>
   </section>
 
