rought content section

--- a/index.html
+++ b/index.html
@@ -106,20 +106,57 @@
         <img src="res/ak-1.png" />
         <div class="info">
           <h3>AK Fitness</h3>
+          <p>A beautiful single page scrolling website built specifically to meet the customers needs and send the message that they were looking for.</p>
           <ul>
-            <li>Feature One</li>
-            <li>Feature Two</li>
-            <li>Feature Three</li>
+            <li>Accepts Payments via PayPal</li>
+            <li>Multi Page Site</li>
+            <li>Responsive Design</li>
+            <li>Color and styling geared towards potential clients</li>
           </ul>
         </div>
       </div>
 
     </div>
 
+  </section>
+
+  <section id="contact">
+    <h2 style="width: 80%; max-width: 1300px;" class="section-header">questions, comments, interested? <span style="color: #3498db;">&mdash;</span> lets talk!</h2>
+    <div id="wrap">
+
+      <div class="input-item">
+        <label>NAME</label>
+        <input placeholder="John Doe" />
+      </div>
+
+      <div class="input-item">
+        <label>EMAIL</label>
+        <input placeholder="j.doe@gmail.com" />
+      </div>
+
+      <div class="input-item">
+        <label>SUBJECT</label>
+        <input placeholder="I need a website!" />
+      </div>
+
+      <div id="message-input">
+        <label>MESSAGE</label>
+        <textarea placeholder="Here are the details..."></textarea>
+      </div>
+
+      <div id="send-container">
+        <button id="send-button">SEND</button>
+      </div>
 
 
     </div>
   </section>
+
+  <!--
+  <footer>
+    Footer!
+  </footer>
+  -->
 
 </body>
 </html>
