--- a/index.html
+++ b/index.html
@@ -124,39 +124,47 @@
     <h2 style="width: 80%; max-width: 1300px;" class="section-header">questions, comments, interested? <span style="color: #3498db;">&mdash;</span> lets talk!</h2>
     <div id="wrap">
 
-      <div class="input-item">
-        <label>NAME</label>
-        <input placeholder="John Doe" />
+      <div id="input-container">
+        <div class="input-item">
+          <label>NAME</label>
+          <input placeholder="John Doe" />
+        </div>
+
+        <div class="input-item">
+          <label>EMAIL</label>
+          <input placeholder="j.doe@gmail.com" />
+        </div>
+
+        <div class="input-item">
+          <label>SUBJECT</label>
+          <input placeholder="I need a website!" />
+        </div>
+
+        <div id="message-input">
+          <label>MESSAGE</label>
+          <textarea placeholder="Here are the details..."></textarea>
+        </div>
+
+        <div id="send-container">
+            <button><img src="res/send.png"/></button>
+        </div>
+
       </div>
 
-      <div class="input-item">
-        <label>EMAIL</label>
-        <input placeholder="j.doe@gmail.com" />
+      <div id="bio-area">
+        <img src="res/me.png" />
+        <h3>Dylan Rose</h3>
+        <p>I have been developing my passion for software development since my Junior year of high school when I took an introductory course in Web Design. It was then that I became obsessed with the infinite number of different skills that I could learn and then directly apply to whatever project I was working on at the time. To this day my main goal is to continually push myself to keep learning new things every day as I strongly feel that continual learning and growth is one of the key factors necessary to being successful in this field. Up until now I have been putting most of my focus on sharpening my Java skills and specifically applying those skills to Android app development. Having reached my goal of releasing an app to the market, I have decided to shift my area of focus a bit towards web development. If you have any questions or comments please feel free to reach out using the form at the bottom of the page!</p>
       </div>
 
-      <div class="input-item">
-        <label>SUBJECT</label>
-        <input placeholder="I need a website!" />
-      </div>
-
-      <div id="message-input">
-        <label>MESSAGE</label>
-        <textarea placeholder="Here are the details..."></textarea>
-      </div>
-
-      <div id="send-container">
-        <button id="send-button">SEND</button>
-      </div>
 
 
     </div>
   </section>
 
-  <!--
   <footer>
-    Footer!
+    
   </footer>
-  -->
 
 </body>
 </html>
