updating font sized

--- a/index.html
+++ b/index.html
@@ -163,7 +163,9 @@
   </section>
 
   <footer>
-    
+    <h3>+1 508 801 6421</h3>
+    <h3>Dylan Rose &mdash; 2017</h3>
+    <h3>dylanrose60@gmail.com</h3>
   </footer>
 
 </body>
