--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
           <h1>Dylan Rose</h1>
         </div>
         <div id="nav-right">
-          <a>Nav One</a>
-          <a>Nav Two</a>
-          <a>Nav Three</a>
+          <a>HOME</a>
+          <a>ABOUT</a>
+          <a>PROJECTS</a>
+          <a>CONTACT</a>
         </div>
       </div>
     </nav>
