fix nav scroll indicator for contact section

--- a/index.html
+++ b/index.html
@@ -127,23 +127,23 @@
 
       <div id="input-container">
         <div class="input-item">
-          <label>NAME</label>
-          <input placeholder="John Doe" />
+          <label for="name">NAME</label>
+          <input id="name" type="text" placeholder="John Doe" />
         </div>
 
         <div class="input-item">
-          <label>EMAIL</label>
-          <input placeholder="j.doe@gmail.com" />
+          <label for="email">EMAIL</label>
+          <input id="email" type="email" placeholder="j.doe@gmail.com" />
         </div>
 
         <div class="input-item">
           <label>SUBJECT</label>
-          <input placeholder="I need a website!" />
+          <input id="subject" type="text" placeholder="I need a website!" />
         </div>
 
         <div id="message-input">
-          <label>MESSAGE</label>
-          <textarea placeholder="Here are the details..."></textarea>
+          <label for="message">MESSAGE</label>
+          <textarea id="message" placeholder="Here are the details..."></textarea>
         </div>
 
         <div id="send-container">
